# oxybox

./: .gitignore  CONTRIBUTE.md  LICENSE.md  README.md  devbox.json  sonar-project.properties
.github/actions/docker/: action.yml
.github/workflows/: BUILD.yml  BUILD_AND_DEPLOY.yml
oxybox/: .env  Cargo.toml  Dockerfile  build.rs  config.yml  docker-compose.yml  example-config.yml
oxybox/src/: main.rs
oxybox/src/config/: app_config.rs  mod.rs  model.rs  probe_config.rs
oxybox/src/http_probe/: mod.rs  probe.rs  result.rs
oxybox/src/mimir/: client.rs  mod.rs
oxybox/src/probe/: mod.rs  probe.rs  result.rs
oxybox/src/proto_generated/: prometheus.rs
