[package]
name = "oxybox"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
x509-parser = "0.17"
url = "2"
prost = "0.14"         # Protobuf runtime
prost-types = "0.14"   # For well-known Protobuf types (like Timestamp, not directly used here but good to have)
snap = "1.1"           # For Snappy compression
chrono = "0.4"         # For current timestamp in milliseco# Add these for the certificate checking functionality

[build-dependencies]
prost-build = "0.14"   # Protobuf code generator for Prost
walkdir = "2.3"        # For iterating directories in build.rs (useful for finding proto files)
