[package]
name = "oxybox"
version = "1.0.1"
authors = ["Thomas Luijken"]
categories = ["command-line-utilities"]
description = "A drop in replacement for blackbox exporter for Prometheus, with support for TLS and HTTP/3."
license = "MIT OR Apache-2.0"
repository = "https://github.com/baseflow/oxybox"
homepage = "https://baseflow.com"
keywords = ["prometheus", "exporter", "blackbox", "http", "https", "tls", "http3"]
readme = "README.md"
rust-version = "1.85"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json",  "rustls-tls", "http3"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
x509-parser = "0.17"
url = "2"
prost = "0.14"
snap = "1.1"
chrono = "0.4"
rustls = "0.23"
tokio-rustls = "0.26"
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime", "system-config"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] } 
serde = { version = "1.0", features = ["derive"] }
unicode-truncate = "2.0"
openssl = { version = "0.10", features = ["vendored"] }
serde_yaml = "0.9"
dotenvy = "0.15"

[build-dependencies]
prost-build = "0.14"   # Protobuf code generator for Prost
